--- a/src/index.html
+++ b/src/index.html
@@ -89,12 +89,10 @@
         </div>
       </div>
     </footer>
-
-    <button class="open-modal" data-open>Открыть модалку</button>
     <!-- Overlay -->
     <div class="overlay is-hidden">
       <div class="modal__card">
-        <span class="close-modal" data-close></span>
+        <span class="close-modal"></span>
       </div>
     </div>
   </body>
